--- a/App.Web/Views/DoctorPole/FollowupIndex.cshtml
+++ b/App.Web/Views/DoctorPole/FollowupIndex.cshtml
@@ -8,7 +8,7 @@
         HttpMethod = "POST",
         UpdateTargetId = "dialog1Body",
         InsertionMode = InsertionMode.Replace,
-        OnSuccess = "openDialog1('Suspected Staff')",
+        OnSuccess = "openDialog1('Staff Info')",
         LoadingElementId = "loading",
         OnFailure = "failure"
     };
