--- a/App.Web/Views/DoctorPole/CreateDetail.cshtml
+++ b/App.Web/Views/DoctorPole/CreateDetail.cshtml
@@ -23,7 +23,7 @@
     <table>
         <tr>
             <td style="width:50%; vertical-align:top;">
-                <h3>@Html.DisplayFor(m=> m.StaffName)</h3>
+                <h3 style="color:#ff6a00">@Html.DisplayFor(m => m.StaffName)</h3>
                 <table class="table table-striped table-bordered fixed_headers">                    
                     <tr>
                         <td>
@@ -34,7 +34,7 @@
                             @Html.DropDownListFor(model => model.ProgramId, Model.ProgramList)
                             @Html.ValidationMessageFor(model => model.ProgramId)
                             Designation
-                            @Html.TextBoxFor(model => model.Designation)
+                            @Html.TextBoxFor(model => model.Designation,new { @style = "color:#ff6a00" })
                             @Html.ValidationMessageFor(model => model.Designation)
                             Division
                             @Html.DropDownListFor(model => model.DivisionId, Model.DivisionList)
