--- a/App.Web/Views/DoctorPole/FollowupIndex.cshtml
+++ b/App.Web/Views/DoctorPole/FollowupIndex.cshtml
@@ -135,6 +135,12 @@
             <th>
                 Data Entered by
             </th>
+            <th>
+                Counseling by
+            </th>
+            <th>
+                Last Counseling at
+            </th>
             @if (UserRole.Check("DoctorPool_Doc", SessionHelper.Role)
                 || UserRole.Check("DoctorPool_Suspect", SessionHelper.Role))
             {
@@ -212,7 +218,7 @@
             //'ToDate': 'ToDate'
         }
         var btns = {
-            12: false //column number : is button group
+            14: false //column number : is button group
         };
 
         /*data grid initializer*/
