--- a/App.Web/Views/DoctorPole/ReportIndex.cshtml
+++ b/App.Web/Views/DoctorPole/ReportIndex.cshtml
@@ -161,6 +161,12 @@
             <th>
                 Data Entered by
             </th>
+            <th>
+                Counseling by
+            </th>
+            <th>
+                Last Counseling at
+            </th>
             @if (UserRole.Check("DoctorPool_Doc", SessionHelper.Role)
                 || UserRole.Check("DoctorPool_Suspect", SessionHelper.Role))
             {
@@ -260,7 +266,7 @@
             'StatusIds': 'StatusIds'
         }
         var btns = {
-            12: false //column number : is button group
+            14: false //column number : is button group
         };
 
         /*data grid initializer*/
