adding new index page, url redirection and speeling mistack

--- a/App.Web/Views/DetailSubmission/Index.cshtml
+++ b/App.Web/Views/DetailSubmission/Index.cshtml
@@ -227,9 +227,8 @@
                 </div>
                 <input type="hidden" id="onlyPatient" value="false" />
                 <div class="filter-item">
-                    <button id="dateSearchButton2" class="btn btn-bracify search">
-                        <span>সম্ভাব্য রোগী</span>@*শুধু*@
-                        @*<img src="@Url.Content("~/Content/src/images/svg/tabular-data/search.svg")" alt="Search">*@
+                    <button id="dateSearchButton2" class="btn btn-bracify search" style="width:115px">
+                        <span>শুধু সম্ভাব্য রোগী</span>
                     </button>
                 </div>
 
