--- a/App.Web/Views/Shared/_leftmenu.cshtml
+++ b/App.Web/Views/Shared/_leftmenu.cshtml
@@ -16,7 +16,7 @@
     {
         <a id="total_survey" class="sidebar-item" href="~/DoctorPole/Dashboard">
             <svg xmlns="http://www.w3.org/2000/svg" width="19.743" height="19.693" viewBox="0 0 19.743 19.693"> <path id="program-data" d="M13.859,3.075V6.066A6.905,6.905,0,0,1,19.781,12.9a7.032,7.032,0,0,1-.474,2.507l2.567,1.51a9.749,9.749,0,0,0,.869-4.018,9.877,9.877,0,0,0-8.884-9.822Zm-.987,16.732a6.906,6.906,0,0,1-.987-13.741V3.075a9.871,9.871,0,1,0,8.934,15.656l-2.567-1.51A6.861,6.861,0,0,1,12.871,19.807Z" transform="translate(-3 -3.075)" fill="#b9b9b9" /></svg>
-            <span>Telemedicine</span>
+            <span>TeleHealth Consultation</span>
         </a>
     }
 
