--- a/App.Web/Content/css/brac/site.css
+++ b/App.Web/Content/css/brac/site.css
@@ -63,8 +63,9 @@
         text-decoration: none;
         color: #D10D74;
     }
-.datepicker.dropdown-menu{
-    width:225px;
+
+.datepicker.dropdown-menu {
+    width: 225px;
 }
 
 
@@ -155,9 +156,18 @@ a.report-item:hover {
     height: 100px;
 }
 
+.bullentin-wrapper {
+    margin-top: 15px;
+}
+
+.topbar-dropdowns.float-right {
+    margin-top: 5px;
+}
+
 @media screen and (min-width: 992px) {
-    #bullentin {
-        width: 600px !important;
+    .bullentin-wrapper {
+        max-width: 100% !important;
+        margin-top: 15px;
     }
 
     .table-responsive {
@@ -179,7 +189,7 @@ a.report-item:hover {
         display: block !important;
     }*/
     .filter-item {
-         max-width: 100% !important; 
+        max-width: 100% !important;
     }
 }
 
@@ -373,7 +383,13 @@ a.report-item:hover {
 
 .notification-dd {
     margin-right: 10px;
+    width: 100px;
 }
+
+    .notification-dd .corner {
+        top: -3px;
+        right: 6px;
+    }
 
 ul.dropdown-menu {
     padding: 5px;
@@ -392,6 +408,7 @@ ul.dropdown-menu {
 .dataTables_length label select {
     margin-right: 10px;
 }
+
 .filter-item {
     max-width: 300px;
 }
@@ -400,10 +417,11 @@ ul.dropdown-menu {
     border: 1px solid #eee;
     box-sizing: content-box;
 }
-.sidebar.in
-{
-    z-index:1000;
+
+.sidebar.in {
+    z-index: 1000;
 }
+
 .fixed_headers {
     overflow-y: auto;
     height: 100px;
@@ -414,11 +432,13 @@ ul.dropdown-menu {
         position: -webkit-sticky;
         top: 0;
     }
+
     .fixed_headers thead tr:nth-child(2) th {
         position: sticky;
         position: -webkit-sticky;
         top: 45px;
     }
+
 .thead-yellow th {
     z-index: 10;
 }
@@ -426,6 +446,7 @@ ul.dropdown-menu {
 #map path[data-original-title] {
     text-transform: capitalize;
 }
+
 .table-responsive {
     display: initial;
 }
