--- a/App.Web/Views/Shared/_Header.cshtml
+++ b/App.Web/Views/Shared/_Header.cshtml
@@ -2,79 +2,93 @@
 @using AppProj.Web;
 @using AppProj.Web.Helpers;
 <nav class="container-custom topbar-nav navbar">
-    <a class="navbar-brand" href="#">
-        <img class="img-fluid logo" src=@Url.Content("~/Content/src/images/brac-logo.svg") alt="Brac" />
-    </a>
-    <div class="bullentin-wrapper">
-        <h2 class="bulletin-header">Notice</h2>
-        <div id="bullentin">
-            <p>
-                <span class="bullentin-item">Respected Colleagues, thank you for visiting. This platform is being heartened with regular analysis and heat maps. Please log in daily for new relevant updates. Thank you!</span>
-            </p>
+
+    <div class="row">
+        <div class="col-2">
+            <a class="navbar-brand" href="#">
+                <img class="img-fluid logo" src=@Url.Content("~/Content/src/images/brac-logo.svg") alt="Brac" />
+            </a>
         </div>
-    </div>
-    <div class="topbar-dropdowns">
-        <div class="dropdown notification-dd">
-            <span class="circular">Circulars</span>
-            <span id="spnmessagetop" class="count-badge red corner msg dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></span>
-
-            <img src="@Url.Content("~/Content/src/images/svg/folder_open.svg")" class="message-svg notification-icon dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" />
-
-            <div id="divmessages" class="dropdown-menu dropdown-menu-right datatree-menu">
-                <h6 class="dropdown-header d-flex align-items-center justify-content-between">
-                    <span>
-                        <span class="mr-3">Circulars</span>
-                        <span id="spnmessage" class="count-badge red"></span>
-                    </span>
-                    <a class="view-all-msg" href="#">View all</a>
-                </h6>
-                <a class="dropdown-item" href="#">
-                    Some notification
-                </a>
-                <a class="dropdown-item" href="#">
-                    Some other notification Some other notification
-                </a>
+        <div class="col-6">
+            <div class="bullentin-wrapper">
+                <h2 class="bulletin-header">Notice</h2>
+                <div id="bullentin">
+                    <p>
+                        <span class="bullentin-item">Respected Colleagues, thank you for visiting. This platform is being heartened with regular analysis and heat maps. Please log in daily for new relevant updates. Thank you!</span>
+                    </p>
+                </div>
             </div>
         </div>
-        <div class="dropdown notification-dd">
-            <span class="activities">Activities</span>
-            <span id="spnactivitiestop" class="count-badge green corner dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">4</span>
-            <svg class="activity-svg notification-icon dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 24.5 28.6" style="enable-background:new 0 0 24.5 28.6;" xml:space="preserve">
+        <div class="col-4">
+            <div class="topbar-dropdowns float-right">
+                <div class="dropdown notification-dd ">
+                    <span class="circular">Circulars</span>
+                    <span id="spnmessagetop" class="count-badge red corner msg dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></span>
+
+                    <img src="@Url.Content("~/Content/src/images/svg/folder_open.svg")" class="message-svg notification-icon dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" />
+
+                    <div id="divmessages" class="dropdown-menu dropdown-menu-right datatree-menu">
+                        <h6 class="dropdown-header d-flex align-items-center justify-content-between">
+                            <span>
+                                <span class="mr-3">Circulars</span>
+                                <span id="spnmessage" class="count-badge red"></span>
+                            </span>
+                            <a class="view-all-msg" href="#">View all</a>
+                        </h6>
+                        <a class="dropdown-item" href="#">
+                            Some notification
+                        </a>
+                        <a class="dropdown-item" href="#">
+                            Some other notification Some other notification
+                        </a>
+                    </div>
+                </div>
+                <div class="dropdown notification-dd">
+                    <span class="activities">Activities</span>
+                    <span id="spnactivitiestop" class="count-badge green corner dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">4</span>
+                    <svg class="activity-svg notification-icon dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 24.5 28.6" style="enable-background:new 0 0 24.5 28.6;" xml:space="preserve">
                     
-            <g><polygon class="st0" points="3.3,18.1 3.3,18.1 3.3,18.1 " /><path class="st1" d="M18.7,15.1c-0.3,0.1-0.5,0.4-0.5,0.7v9.2c0.1,0.5-0.2,1.1-0.7,1.3c-0.3,0.1-0.6,0.1-0.8,0.1l-11.6,0c-0.6,0-1.2,0-1.7,0c-0.6,0-1.2-0.4-1.2-1.1c0-0.1,0-0.3,0-0.4V5.7c0-1,0.5-1.5,1.5-1.5h4.9C9,4.3,9.3,4,9.4,3.6c0-0.1,0-0.1,0-0.2c0-0.4-0.4-0.8-0.8-0.8c-1.8,0-3.5,0-5.3,0c-1.4,0-2.5,1-2.8,2.3v21c0.1,0.6,0.4,1.1,0.8,1.5c0.4,0.4,0.9,0.6,1.4,0.7h14.6c1.4-0.2,2.4-1.4,2.4-2.8v-2c0-2.4,0-4.9,0-7.3c0-0.3-0.1-0.5-0.3-0.7C19.3,15.1,19,15,18.7,15.1z" /><path class="st1" d="M18,0.5C18,0.5,18,0.5,18,0.5c-3.3,0-6.1,2.7-6.1,6c0,3.3,2.7,6,6,6h0c0,0,0,0,0,0c1.6,0,3.1-0.6,4.3-1.8C23.4,9.7,24,8.2,24,6.5C24,3.3,21.3,0.5,18,0.5z M18,10.9c0,0-0.1,0-0.1,0l-0.1,0c-1.1,0-2.2-0.5-3-1.3c-0.8-0.8-1.2-1.9-1.2-3.1c0,0,0-0.1,0-0.1c0-1.2,0.5-2.2,1.3-3.1c0.8-0.8,1.9-1.2,3.1-1.2l0.1,0c1.2,0,2.2,0.5,3.1,1.3s1.2,1.9,1.2,3.1l0,0.1C22.3,9,20.4,10.9,18,10.9z" /><path class="st1" d="M11.2,12.2C11,12,10.8,12,10.6,12l-3.1,0l-1,0c-0.7,0-1.4,0-2,0c-0.1,0-0.1,0-0.1,0c-0.4,0-0.8,0.4-0.8,0.8c0,0,0,0.1,0,0.1c0,0.2,0.1,0.4,0.3,0.5c0.2,0.1,0.4,0.2,0.6,0.2l6.1,0c0.1,0,0.1,0,0.1,0c0.4,0,0.8-0.4,0.8-0.8c0-0.1,0-0.1,0-0.1C11.4,12.5,11.3,12.3,11.2,12.2z" /><path class="st1" d="M12.1,24.3C12.2,24.3,12.2,24.4,12.1,24.3c0.2,0.2,0.5,0.3,0.7,0.3c0.2,0,0.4-0.1,0.6-0.3c0.8-0.8,1.7-1.7,2.5-2.5l0.6-0.6c0.2-0.2,0.3-0.4,0.3-0.7v0c0-0.1,0-0.1,0-0.2c0-0.1-0.1-0.3-0.2-0.4c-0.2-0.1-0.4-0.2-0.6-0.2c-0.2,0-0.4,0.1-0.6,0.3c-0.7,0.7-1.4,1.3-2,2c-0.1,0.1-0.3,0.3-0.5,0.3c0,0,0,0,0,0c-0.2,0-0.4-0.1-0.5-0.2c-0.2-0.2-0.4-0.2-0.6-0.2c-0.2,0-0.4,0.1-0.6,0.2c-0.3,0.3-0.3,0.8,0,1.2C11.4,23.6,11.8,24,12.1,24.3z" /><path class="st1" d="M8.5,17.2c-1.4,0-2.7,0-4.1,0c0,0-0.1,0-0.1,0c-0.2,0-0.4,0.1-0.5,0.2c-0.1,0.2-0.2,0.4-0.2,0.6l0,0.1c0,0.4,0.4,0.8,0.8,0.8l2.7,0c0.5,0,0.9,0,1.4,0l0.1,0c0.4,0,0.8-0.4,0.8-0.8c0,0,0-0.1,0-0.1C9.3,17.5,9,17.1,8.5,17.2z" /><path class="st1" d="M18.8,5.1c0-0.2,0-0.5,0-0.7c0-0.4-0.4-0.8-0.8-0.7c0,0,0,0,0,0c-0.4,0-0.8,0.3-0.8,0.8v0.4c0,0.1,0,0.2,0,0.3c0,0.3,0,0.4-0.1,0.5c-0.1,0.1-0.3,0.1-0.6,0.1l-0.6,0c-0.2,0-0.4,0.1-0.6,0.2s-0.2,0.3-0.2,0.6v0.1c0,0.4,0.4,0.8,0.8,0.8c0.7,0,1.4,0,2.1,0c0.3,0,0.4-0.1,0.6-0.2c0.1-0.2,0.2-0.3,0.2-0.6c0-0.2,0-0.5,0-0.7l0-0.4L18.8,5.1z" /></g></svg>
-            <div id="divactivities" class="dropdown-menu dropdown-menu-right datatree-menu">
-                <h6 class="dropdown-header d-flex align-items-center"><span class="mr-3">Activities</span> <span id="spnactivities" class="count-badge green">4</span></h6>
-                <a class="dropdown-item" href="#">
-                    Some notification
-                </a>
-                <a class="dropdown-item" href="#">
-                    Some other notification
-                </a>
-            </div>
-        </div>
-        <div class="dropdown user-dd">
-            <div class="user-profile-toggle dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <img class="profile-picture" src="@Url.Content("~/Content/img/icons/user.png")" alt="" />
-                <p>
-                    <strong>@SessionHelper.UserName</strong>
-                    <span>Technology Brac</span>
-                </p>
-            </div>
+                    <g><polygon class="st0" points="3.3,18.1 3.3,18.1 3.3,18.1 " /><path class="st1" d="M18.7,15.1c-0.3,0.1-0.5,0.4-0.5,0.7v9.2c0.1,0.5-0.2,1.1-0.7,1.3c-0.3,0.1-0.6,0.1-0.8,0.1l-11.6,0c-0.6,0-1.2,0-1.7,0c-0.6,0-1.2-0.4-1.2-1.1c0-0.1,0-0.3,0-0.4V5.7c0-1,0.5-1.5,1.5-1.5h4.9C9,4.3,9.3,4,9.4,3.6c0-0.1,0-0.1,0-0.2c0-0.4-0.4-0.8-0.8-0.8c-1.8,0-3.5,0-5.3,0c-1.4,0-2.5,1-2.8,2.3v21c0.1,0.6,0.4,1.1,0.8,1.5c0.4,0.4,0.9,0.6,1.4,0.7h14.6c1.4-0.2,2.4-1.4,2.4-2.8v-2c0-2.4,0-4.9,0-7.3c0-0.3-0.1-0.5-0.3-0.7C19.3,15.1,19,15,18.7,15.1z" /><path class="st1" d="M18,0.5C18,0.5,18,0.5,18,0.5c-3.3,0-6.1,2.7-6.1,6c0,3.3,2.7,6,6,6h0c0,0,0,0,0,0c1.6,0,3.1-0.6,4.3-1.8C23.4,9.7,24,8.2,24,6.5C24,3.3,21.3,0.5,18,0.5z M18,10.9c0,0-0.1,0-0.1,0l-0.1,0c-1.1,0-2.2-0.5-3-1.3c-0.8-0.8-1.2-1.9-1.2-3.1c0,0,0-0.1,0-0.1c0-1.2,0.5-2.2,1.3-3.1c0.8-0.8,1.9-1.2,3.1-1.2l0.1,0c1.2,0,2.2,0.5,3.1,1.3s1.2,1.9,1.2,3.1l0,0.1C22.3,9,20.4,10.9,18,10.9z" /><path class="st1" d="M11.2,12.2C11,12,10.8,12,10.6,12l-3.1,0l-1,0c-0.7,0-1.4,0-2,0c-0.1,0-0.1,0-0.1,0c-0.4,0-0.8,0.4-0.8,0.8c0,0,0,0.1,0,0.1c0,0.2,0.1,0.4,0.3,0.5c0.2,0.1,0.4,0.2,0.6,0.2l6.1,0c0.1,0,0.1,0,0.1,0c0.4,0,0.8-0.4,0.8-0.8c0-0.1,0-0.1,0-0.1C11.4,12.5,11.3,12.3,11.2,12.2z" /><path class="st1" d="M12.1,24.3C12.2,24.3,12.2,24.4,12.1,24.3c0.2,0.2,0.5,0.3,0.7,0.3c0.2,0,0.4-0.1,0.6-0.3c0.8-0.8,1.7-1.7,2.5-2.5l0.6-0.6c0.2-0.2,0.3-0.4,0.3-0.7v0c0-0.1,0-0.1,0-0.2c0-0.1-0.1-0.3-0.2-0.4c-0.2-0.1-0.4-0.2-0.6-0.2c-0.2,0-0.4,0.1-0.6,0.3c-0.7,0.7-1.4,1.3-2,2c-0.1,0.1-0.3,0.3-0.5,0.3c0,0,0,0,0,0c-0.2,0-0.4-0.1-0.5-0.2c-0.2-0.2-0.4-0.2-0.6-0.2c-0.2,0-0.4,0.1-0.6,0.2c-0.3,0.3-0.3,0.8,0,1.2C11.4,23.6,11.8,24,12.1,24.3z" /><path class="st1" d="M8.5,17.2c-1.4,0-2.7,0-4.1,0c0,0-0.1,0-0.1,0c-0.2,0-0.4,0.1-0.5,0.2c-0.1,0.2-0.2,0.4-0.2,0.6l0,0.1c0,0.4,0.4,0.8,0.8,0.8l2.7,0c0.5,0,0.9,0,1.4,0l0.1,0c0.4,0,0.8-0.4,0.8-0.8c0,0,0-0.1,0-0.1C9.3,17.5,9,17.1,8.5,17.2z" /><path class="st1" d="M18.8,5.1c0-0.2,0-0.5,0-0.7c0-0.4-0.4-0.8-0.8-0.7c0,0,0,0,0,0c-0.4,0-0.8,0.3-0.8,0.8v0.4c0,0.1,0,0.2,0,0.3c0,0.3,0,0.4-0.1,0.5c-0.1,0.1-0.3,0.1-0.6,0.1l-0.6,0c-0.2,0-0.4,0.1-0.6,0.2s-0.2,0.3-0.2,0.6v0.1c0,0.4,0.4,0.8,0.8,0.8c0.7,0,1.4,0,2.1,0c0.3,0,0.4-0.1,0.6-0.2c0.1-0.2,0.2-0.3,0.2-0.6c0-0.2,0-0.5,0-0.7l0-0.4L18.8,5.1z" /></g></svg>
+                    <div id="divactivities" class="dropdown-menu dropdown-menu-right datatree-menu">
+                        <h6 class="dropdown-header d-flex align-items-center"><span class="mr-3">Activities</span> <span id="spnactivities" class="count-badge green">4</span></h6>
+                        <a class="dropdown-item" href="#">
+                            Some notification
+                        </a>
+                        <a class="dropdown-item" href="#">
+                            Some other notification
+                        </a>
+                    </div>
+                </div>
+                <div class="dropdown user-dd">
+                    <div class="user-profile-toggle dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <img class="profile-picture" src="@Url.Content("~/Content/img/icons/user.png")" alt="" />
+                        <p>
+                            <strong>@SessionHelper.UserName</strong>
+                            <span>Technology Brac</span>
+                        </p>
+                    </div>
 
-            <div class="dropdown-menu fw-dropdown-menu datatree-menu">
-                <a class="dropdown-item" href="#">
-                    <img class="menu-item-img" src="@Url.Content("~/Content/src/images/svg/profile.svg")" alt="Profile" />
-                    <span>Profile</span>
-                </a>
-                <a class="dropdown-item" href="@SsoUtility.SsoLogout?site=@SsoUtility.Site">
-                    <img class="menu-item-img" src="@Url.Content("~/Content/src/images/svg/sign_out.svg")" alt="Sign Out" />
-                    <span>
-                        Sign Out
-                    </span>
-                </a>
+                    <div class="dropdown-menu fw-dropdown-menu datatree-menu">
+                        <a class="dropdown-item" href="#">
+                            <img class="menu-item-img" src="@Url.Content("~/Content/src/images/svg/profile.svg")" alt="Profile" />
+                            <span>Profile</span>
+                        </a>
+                        <a class="dropdown-item" href="@SsoUtility.SsoLogout?site=@SsoUtility.Site">
+                            <img class="menu-item-img" src="@Url.Content("~/Content/src/images/svg/sign_out.svg")" alt="Sign Out" />
+                            <span>
+                                Sign Out
+                            </span>
+                        </a>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
+
+
+
+
+
 </nav>
 <div class="long-nav">
     <div class="container-custom">
@@ -124,7 +138,7 @@
                         <span>Programmes</span>
                     </p>
                 </a>
-                <a href="~/Main" class="long-nav-item" target="_blank" id="tebular">
+                <a href="@Url.Action("Index","SummerySubmission")" class="long-nav-item" target="_blank" id="tebular">
                     <svg xmlns="http://www.w3.org/2000/svg" width="30.881" height="30.881" viewBox="0 0 30.881 30.881"><g transform="translate(-787.396 -1027.867)"><path d="M818.277,1029.313v20.19a1.982,1.982,0,0,1-2.191,1.532H789.54a2.687,2.687,0,0,1-.63-.039,1.934,1.934,0,0,1-1.514-1.954q0-9.522,0-19.044a1.968,1.968,0,0,1,1.53-2.131h27.9A2.189,2.189,0,0,1,818.277,1029.313ZM806.706,1045.2h0c1.787,0,3.575-.005,5.363.005.3,0,.406-.082.4-.392-.012-1.667-.009-3.334,0-5,0-.256-.075-.354-.344-.354q-5.393.01-10.786,0c-.388,0-.4.011-.4.417q0,2.471,0,4.941c0,.368.014.379.4.379Zm.008-11.523c-1.806,0-3.613,0-5.419,0-.255,0-.359.075-.356.344q.017,1.565,0,3.131c0,.267.1.344.355.344q5.4-.009,10.808,0c.3,0,.374-.112.37-.39-.013-1.013-.006-2.027-.007-3.041,0-.375-.009-.385-.394-.385Zm-10.63,11.525c.844,0,1.687-.006,2.531,0,.255,0,.358-.077.357-.345q-.013-2.531,0-5.062c0-.245-.078-.339-.33-.338q-2.546.01-5.092,0c-.229,0-.325.073-.324.312q.01,2.546,0,5.092c0,.27.1.345.357.342C794.416,1045.194,795.25,1045.2,796.084,1045.2Zm.02-11.523c-.842,0-1.685.008-2.527,0-.259,0-.354.078-.352.344q.017,1.549,0,3.1c0,.269.072.375.356.373q2.527-.014,5.055,0c.245,0,.338-.08.336-.331q-.014-1.579,0-3.159c0-.254-.1-.33-.339-.327C797.789,1033.683,796.947,1033.677,796.1,1033.678Z" fill="#fff" /><path d="M827.966,1194.356a2.008,2.008,0,0,1-1.962-2.577c.316-1.025.72-2.023,1.081-3.034a.313.313,0,0,1,.343-.224q1.9.007,3.8,0c.227,0,.283.073.2.288-.526,1.432-1.035,2.871-1.574,4.3A1.967,1.967,0,0,1,827.966,1194.356Z" transform="translate(-32.515 -135.609)" fill="#fff" /><path d="M913.621,1188.525c.622,0,1.244.005,1.866,0a.326.326,0,0,1,.357.246c.351.982.733,1.954,1.06,2.944a2.043,2.043,0,0,1-3.865,1.317c-.513-1.382-1.013-2.769-1.518-4.154-.115-.315-.093-.349.233-.351.622,0,1.244,0,1.866,0Z" transform="translate(-104.723 -135.609)" fill="#fff" /></g></svg>
                     <p>
                         <span>Tabular</span>
