--- a/App.Web/Content/css/brac/bootstrap-legacy.css
+++ b/App.Web/Content/css/brac/bootstrap-legacy.css
@@ -1,5 +1,5 @@
 ﻿.modal {
-    height: 90%;
+    height: calc(95vh);
 }
 
 .modal-backdrop {
@@ -24,7 +24,7 @@
 
 .modal {
     position: fixed;
-    top: 60%;
+    top: 50%;
     left: 50%;
     z-index: 1050;
     overflow: auto;
